css/glow-style-terminal.css
:root {
    --link-title: #00af5f;
    --link-text: #008787;
    --link-text-P3: #3a8586;
    --body-text: #c6c6c6;
    --heading-color: #00afff;
    --solo-link: #ff87d7;
    --inline-code-background: #2a2a2a;
    --inline-code-text: #ff5f5f;

    --body-background-color: #232322;
    /*--body-background-color: #000000;*/
    /*--body-background-color: #292b35;*/
}

a, a:hover, a:active, a:visited {
    color: #03af5f;
    text-decoration: none;
    font-weight: bold;
}


body {
    color: #c6c6c6;
    background-color: var(--body-background-color);
    font-family: Consolas, monaco, monospace;
}

/*-------------*/
/* --- #'s --- */
/*-------------*/
h2::before { content: "## "; }
h3::before { content: "### "; }
h4::before { content: "#### "; }

h1 {
    display:inline;
    background-color: #5f5fff;
    color: #fffb87;
    font-size: 1rem;
    padding-left: 1em;
    padding-right: 1em;
}

h2, h3, h4, h5 {
    color: #00afff;
    font-size: 1rem;
}

html, body {
    min-height: 100vh;
}

body {
    font-size: 1rem;
    margin: 0;
}

footer {
    border-top: 0.075em solid rgb(85, 85, 85);
    margin-bottom: 1em;
}

.generated-content {
    margin-left: 1vw;
    margin-right: 1vw;
    margin-top: 2em;
}

/* all 'a' that are not within a 'span' within a 'header' */
*:not(header > span) > a::after{
    content: attr(href);
    color: var(--link-text);
    text-decoration: underline;
    font-weight: normal;
    padding-left: 5px;

}

.main > header:nth-child(1) > a:nth-child(1) {
    color: inherit;
}

.main > header:nth-child(1) > a::after {
    content: inherit;
}

#post-listing-ol {
    list-style: square;
    font-style: italic;
    margin-left: 1em;
}

header > span > a, header > span > a:visited {
    /*color: inherit;*/
    font-weight: normal;
}

a:hover::after {
    color: #366fc2;
}

code {
    padding-left: 5px;
    padding-right: 5px;
    background-color: var(--inline-code-background);
    color: var(--inline-code-text);
}

pre {
    display: inline-block;
    margin-left: 20px;
    padding: 5px;
    padding-right: 10px;
    background-color: var(--inline-code-background);
    color: #d7d7af;
}

img {
    max-width: 100%;
    max-height: 75vh;
    display: block;
    margin: 0 auto 0;
}

p {
    margin: 1rem 0;
}

p::before { /* indent hack required to keep monospace looking consistent */
   content: "\00a0"; /* this is &nbsp; */
}

li {
    margin: 0.4rem 0;
}

#heading-listing > ul:nth-child(2) {
    margin-top: 0.25em;
}

#heading-listing-paragraph {
    color: #5e5e5e;
    font-style: italic;
}


/*
 * Add padding to left and right of all sections.
 * Can't just do body{padding: 8px}, as the border lines would not extend properly
 */
div.sidebar { padding-right: 8px; padding-left: 8px; width: calc(100% - 8px - 8px); }
main.main { padding-left: 8px; }
footer { padding-left: 8px;}


/*JS Only Styles*/
.lonesome-link, .lonesome-link::after {
    color: var(--solo-link);
}


/*Media Query*/
@media (min-width: 51em) {

    header {
        font-size: 1.5rem;
    }

    .body {
      display: grid;
      grid-template-columns: auto auto;
      grid-template-rows: min-content min-content;
      gap: 0 0;
      grid-template-areas:
        "main sidebar"
        "footer sidebar";
    }

    .main {
        grid-area: main;
    }

    .generated-content {
        max-width: 80ch;
    }

    #sidebar-shell {
        position: sticky;
        top: 0;
        padding-left: 8px;
    }

    .sidebar {
        justify-self: end;
        grid-area: sidebar;
        border-left: 0.075em solid rgb(85, 85, 85);
        padding-left: 0.5em;
    }

    .footer {
        align-self: end;
        grid-area: footer;
    }
}

/* Smaller Screens */
@media (max-width: 51em) {

    header {
        font-size: 1.25rem;
    }

    .body {
        display: grid;
        grid-auto-columns: 1fr;
        grid-template-columns: auto;
        grid-template-rows: auto auto auto;
        gap: 0 0;
        grid-template-areas:
    "main"
    "sidebar"
    "footer";
    }
    .main { grid-area: main; }
    .sidebar {
        grid-area: sidebar;
        border-top: 0.075em solid rgb(85, 85, 85);
    }
    .footer { grid-area: footer; }
}

main {
    max-width: 100vw;
    overflow: auto;
    overflow-wrap: break-word;
}


img:hover {
    cursor: pointer;
}

